# chinese-chess

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  Cargo.toml  README-BUILD.md  Tauri.toml  build.rs  build.sh  create_icons.py  debug-app.html  fix_history_tests.sh  package-lock.json  package.json  run.bat  run.sh  server.js  server.mjs  simple-app.html  tauri.conf.json  test-tauri-commands.js
docs/: BUILD-SYSTEM-FINAL-REPORT.md  BUILDING-ZH.md
docs/plans/: 2025-01-17-chinese-chess-design.md  2025-01-17-chinese-chess-implementation.md  2026-01-21-round-history-frontend-integration.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.js.map  vite.config.ts
frontend/src/: App.d.ts.map  App.js  App.js.map  App.tsx
frontend/src/components/: ChessBoard.css  ChessBoard.d.ts  ChessBoard.d.ts.map  ChessBoard.js  ChessBoard.js.map  ChessBoard.tsx  ControlPanel.css  ControlPanel.d.ts  ControlPanel.d.ts.map  ControlPanel.js  ControlPanel.js.map  ControlPanel.tsx  GameStatus.css  GameStatus.d.ts  GameStatus.d.ts.map  GameStatus.js  GameStatus.js.map  GameStatus.tsx  HistoryPanel.css  (+5 more)
scripts/: build-linux.sh  build-macos.sh  build-windows.sh
src/: App.tsx  board.rs  cli.rs  game.rs  game_with_history.rs  history.rs  history.rs.backup  lib.rs  main.rs  piece.rs  rules.rs  tauri_commands.rs  validator.rs
src-tauri/: package.json
src-tauri/src/: lib.rs  main.rs
src/board/: coordinate.rs  modl.rs  square.rs
src/game/: modl.rs  rules.rs  state.rs
src/pieces/: chariot.rs  king.rs  mod.rs
tests/: board.rs  game.rs  pieces.rs
